# dependabot-plus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/projects/-Users-c3-dev-dependabot-plus/memory/: MEMORY.md  project_overview.md
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
dependabot_plus/: cli.py
dependabot_plus/analysis/: binary_scan.py  claude_review.py  source_diff.py
dependabot_plus/queue/: fetch.py  models.py
dependabot_plus/report/: github.py
dependabot_plus/sandbox/: builder.py  canary.py  network.py  runner.py
dependabot_plus/sandbox/dockerfiles/: apt.Dockerfile  entrypoint.sh  fake_sudo.sh  gem.Dockerfile  monitor.Dockerfile  monitor_entrypoint.sh  npm.Dockerfile  pip.Dockerfile
tests/: test_binary_scan.py  test_canary.py  test_fetch.py  test_integration.py  test_models.py  test_report.py  test_runner.py  test_source_diff.py
tests/fixtures/: sample_queue.json
tests/fixtures/malicious_packages/clean-pkg/: index.js  package.json
tests/fixtures/malicious_packages/env-stealer/: package.json  postinstall.js
tests/fixtures/malicious_packages/file-scanner/: package.json  postinstall.js
tests/fixtures/malicious_packages/phone-home/: package.json  postinstall.js
tests/fixtures/malicious_packages/sudo-escalator/: package.json  postinstall.js
