[project]
name = "dependabot-plus"
version = "0.1.0"
description = "Analyse Dependabot PRs for supply chain attacks"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
dependabot-plus = "dependabot_plus.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: runs real Docker containers (requires Docker)",
]

[dependency-groups]
dev = ["pytest>=8.0"]
